--- a/shopping/index.html
+++ b/shopping/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -112,7 +113,102 @@
         </div>
     </div>
     <!-- nav模块制作 end -->
+    <!-- 首页专有模块 start-->
+    <div class="w">
+        <div class="main">
+            <div class="focus">
+                <ul>
+                    <li>
+                        <img src="upload/focus1.png" alt="aaa">
+                    </li>
+                </ul>
+            </div>
+            <div class="newsflash">
+                <div class="news">
+                    <div class="news-hd">
+                        <h5>品优购快报</h5>
+                        <a href="#" class="more">更多</a>
 
+
+                    </div>
+                    <div class="news-bd">
+                        <ul>
+                            <li><a href="#"><strong>[重磅]</strong> 它来了它来了，pink老师走来了, 它是谁？</a></li>
+                            <li><a href="#"><strong>[重磅]</strong> 它来了它来了，pink老师走来了, 它是谁？</a></li>
+                            <li><a href="#"><strong>[重磅]</strong> 它来了它来了，pink老师走来了, 它是谁？</a></li>
+                            <li><a href="#"><strong>[重磅]</strong> 它来了它来了，pink老师走来了, 它是谁？</a></li>
+                            <li><a href="#"><strong>[重磅]</strong> 它来了它来了，pink老师走来了, 它是谁？</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="lifeservice">
+                    <ul>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+                        </li>
+                        <li>
+                            <i></i>
+                            <p>话费</p>
+
+                        </li>
+                        <li><i></i>
+                            <p>话费</p>
+                        </li>
+                        <li><i></i>
+                            <p>话费</p>
+                        </li>
+                        <li><i></i>
+                            <p>话费</p>
+                        </li>
+                        <li><i></i>
+                            <p>话费</p>
+                        </li>
+                        <li><i></i>
+                            <p>话费</p>
+                        </li>
+                        <li><i></i>
+                            <p>话费</p>
+                        </li>
+                        <li><i></i>
+                            <p>话费</p>
+                        </li>
+                        <li><i></i>
+                            <p>话费</p>
+                        </li>
+                        <li><i></i>
+                            <p>话费</p>
+                        </li>
+                        <li><i></i>
+                            <p>话费</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="bargain">
+                    <img src="upload/bargain.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 首页专有模块 end -->
+    <!-- 推荐模块 start -->
+    <div class="w recom">
+        <div class="recom_hd">
+            <img src="images/recom.png" alt="">
+        </div>
+        <div class="recom_bd">
+            <ul>
+                <li><img src="upload/recom_03.jpg" alt=""></li>
+                <li><img src="upload/recom_03.jpg" alt=""></li>
+                <li><img src="upload/recom_03.jpg" alt=""></li>
+                <li><img src="upload/recom_03.jpg" alt=""></li>
+            </ul>
+        </div>
+
+    </div>
+    <!-- 推荐模块end -->
+    <!-- 楼层区域制作 start  -->
+    <!-- 楼层区域制作end  -->
     <!-- 底部模块的制作 start -->
     <footer class="footer">
         <div class="w">
